added feature layer of collisions in sd

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "    MultiPolygon,\n",
     ")\n",
     "\n",
-    "gis = GIS(username = arcgiskey.username, password = arcgiskey.password)"
+    "gis = GIS(username = arcgiskey.USERNAME, password = arcgiskey.PASSWORD)"
    ]
   },
   {
@@ -115,6 +115,102 @@
     "\n",
     "SANDAG: Safety - Collions (SWITRS) 2023 \n",
     "* This data focuses on collision data for San Diego within 2022, due to it's completeness. It currently has over 10000 collisions in San Diego County. Primarily, it uses the Statewide Integrated Traffic Records System (SWITRS) as a database and process data gathered from a collision scene. We take this specifically from SANDAG due to their reliability as a data distributor for spatial data with the help of California Highway Patrol. We will be using data primarily from 2023. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read data and convert into a spatial dataframe\n",
+    "data = gpd.read_file(\"data/collision_data_2022.csv\")\n",
+    "data['geometry'] = [Point(xy) for xy in zip(data['LATITUDE sandag'], data['LONGITUDE sandag'])]\n",
+    "data = gpd.GeoDataFrame(data, geometry = 'geometry', crs = 'EPSG:4326')\n",
+    "data = data.drop(columns = ['Reservation sandag', 'Shape', 'CASE ID'])\n",
+    "sdf = GeoAccessor.from_geodataframe(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert into a feature layer -> DON'T RUN AGAIN, ALREADY CREATED\n",
+    "# feature_layer = sdf.spatial.to_featurelayer(\n",
+    "#     title = \"Collision Data San Diego County 2022\",\n",
+    "#     tags = [\"Collision\", \"Data\", \"2022\"],\n",
+    "#     overwrite = False,\n",
+    "#     sanitize_columns = True,\n",
+    "#     service_name = \"collision_data_sd_2022\"\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Item title:\"San Diego Census Urban Areas_WFL1\" type:Feature Layer Collection owner:gis1fa22_13>,\n",
+       " <Item title:\"BalboaParkCanyons_Shamblin_WFL1\" type:Feature Layer Collection owner:gis1fa23_3>,\n",
+       " <Item title:\"agourb\" type:Feature Layer Collection owner:lajasper_ucsd>,\n",
+       " <Item title:\"Microtransit Adoption Metrics\" type:Feature Layer Collection owner:jil386_UCSDOnline>,\n",
+       " <Item title:\"Old_Town_Adopt_WFL1\" type:Feature Layer Collection owner:hschen_UCSDOnline>,\n",
+       " <Item title:\"SanGIS Census BlockGroups\" type:Feature Layer Collection owner:jil386_UCSDOnline>,\n",
+       " <Item title:\"Base Blockgroups\" type:Feature Layer Collection owner:tjoshi_UCSDOnline>,\n",
+       " <Item title:\"CENSUS_BLOCKGROUPS\" type:Feature Layer Collection owner:tjoshi_UCSDOnline>,\n",
+       " <Item title:\"Alleys_ Downtown \" type:Feature Layer Collection owner:vwpage_ucsd>,\n",
+       " <Item title:\"Poway Tree Canopy Distribution_WFL1\" type:Feature Layer Collection owner:zhzheng_UCSDOnline>]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gis.content.search(query = \"San Diego Urban\", item_type = \"Feature Layer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collision_layer = gis.content.search(query = \"owner:dsc170wi25_31\", item_type = \"Feature Layer\")[1]\n",
+    "collision_fl = gis.content.get(collision_layer.id).layers[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2fbbb0c50b59490f894e6cf0aa3f2aff",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map1 = gis.map(\"San Diego, CA\")\n",
+    "map1.content.add(collision_fl)\n",
+    "map1"
    ]
   },
   {
