added feature layer and general map for collisions

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,66 +119,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data and convert into a spatial dataframe\n",
     "data = gpd.read_file(\"data/collision_data_2022.csv\")\n",
-    "data['geometry'] = [Point(xy) for xy in zip(data['LATITUDE sandag'], data['LONGITUDE sandag'])]\n",
-    "data = gpd.GeoDataFrame(data, geometry = 'geometry', crs = 'EPSG:4326')\n",
-    "data = data.drop(columns = ['Reservation sandag', 'Shape', 'CASE ID'])\n",
-    "sdf = GeoAccessor.from_geodataframe(data)"
+    "data = data.drop(columns = ['Reservation sandag', 'Shape', 'CASE ID', 'X', 'Y'])\n",
+    "data['LONGITUDE sandag'] = data['LONGITUDE sandag'].astype(float)\n",
+    "data['LATITUDE sandag'] = data['LATITUDE sandag'].astype(float)\n",
+    "sdf = GeoAccessor.from_xy(data, x_column='LONGITUDE sandag', y_column='LATITUDE sandag', sr = 4326)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert into a feature layer -> DON'T RUN AGAIN, ALREADY CREATED\n",
-    "# feature_layer = sdf.spatial.to_featurelayer(\n",
-    "#     title = \"Collision Data San Diego County 2022\",\n",
-    "#     tags = [\"Collision\", \"Data\", \"2022\"],\n",
-    "#     overwrite = False,\n",
-    "#     sanitize_columns = True,\n",
-    "#     service_name = \"collision_data_sd_2022\"\n",
-    "# )"
+    "feature_layer = sdf.spatial.to_featurelayer(\n",
+    "    title = \"Collision Data SD County 2022\",\n",
+    "    gis = gis, \n",
+    "    tags = [\"Collision\", \"Data\", \"2022\"],\n",
+    "    overwrite = False,\n",
+    "    sanitize_columns = True,\n",
+    "    service_name = \"Collision_San_Diego_County_2022\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Item title:\"San Diego Census Urban Areas_WFL1\" type:Feature Layer Collection owner:gis1fa22_13>,\n",
-       " <Item title:\"BalboaParkCanyons_Shamblin_WFL1\" type:Feature Layer Collection owner:gis1fa23_3>,\n",
-       " <Item title:\"agourb\" type:Feature Layer Collection owner:lajasper_ucsd>,\n",
-       " <Item title:\"Microtransit Adoption Metrics\" type:Feature Layer Collection owner:jil386_UCSDOnline>,\n",
-       " <Item title:\"Old_Town_Adopt_WFL1\" type:Feature Layer Collection owner:hschen_UCSDOnline>,\n",
-       " <Item title:\"SanGIS Census BlockGroups\" type:Feature Layer Collection owner:jil386_UCSDOnline>,\n",
-       " <Item title:\"Base Blockgroups\" type:Feature Layer Collection owner:tjoshi_UCSDOnline>,\n",
-       " <Item title:\"CENSUS_BLOCKGROUPS\" type:Feature Layer Collection owner:tjoshi_UCSDOnline>,\n",
-       " <Item title:\"Alleys_ Downtown \" type:Feature Layer Collection owner:vwpage_ucsd>,\n",
-       " <Item title:\"Poway Tree Canopy Distribution_WFL1\" type:Feature Layer Collection owner:zhzheng_UCSDOnline>]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gis.content.search(query = \"San Diego Urban\", item_type = \"Feature Layer\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,13 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fbbb0c50b59490f894e6cf0aa3f2aff",
+       "model_id": "72128c993a38431da2e767c8ea8ae92b",
        "version_major": 2,
        "version_minor": 1
       },
@@ -202,7 +174,7 @@
        "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
