commented out feature layer creation

--- a/project.ipynb
+++ b/project.ipynb
@@ -119,13 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data and convert into a spatial dataframe\n",
     "data = gpd.read_file(\"data/collision_data_2022.csv\")\n",
     "data = data.drop(columns = ['Reservation sandag', 'Shape', 'CASE ID', 'X', 'Y'])\n",
+    "\n",
+    "# conver to floats in order to make sure the spatial references work\n",
     "data['LONGITUDE sandag'] = data['LONGITUDE sandag'].astype(float)\n",
     "data['LATITUDE sandag'] = data['LATITUDE sandag'].astype(float)\n",
     "sdf = GeoAccessor.from_xy(data, x_column='LONGITUDE sandag', y_column='LATITUDE sandag', sr = 4326)"
@@ -133,19 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert into a feature layer -> DON'T RUN AGAIN, ALREADY CREATED\n",
-    "feature_layer = sdf.spatial.to_featurelayer(\n",
-    "    title = \"Collision Data SD County 2022\",\n",
-    "    gis = gis, \n",
-    "    tags = [\"Collision\", \"Data\", \"2022\"],\n",
-    "    overwrite = False,\n",
-    "    sanitize_columns = True,\n",
-    "    service_name = \"Collision_San_Diego_County_2022\"\n",
-    ")"
+    "# feature_layer = sdf.spatial.to_featurelayer(\n",
+    "#     title = \"Collision Data SD County 2022\",\n",
+    "#     gis = gis, \n",
+    "#     tags = [\"Collision\", \"Data\", \"2022\"],\n",
+    "#     overwrite = False,\n",
+    "#     sanitize_columns = True,\n",
+    "#     service_name = \"Collision_San_Diego_County_2022\"\n",
+    "# )"
    ]
   },
   {
