added map with zip code density zones and collisions

--- a/project.ipynb
+++ b/project.ipynb
@@ -114,12 +114,15 @@
     "# 5) Data Sources:\n",
     "\n",
     "SANDAG: Safety - Collions (SWITRS) 2023 \n",
-    "* This data focuses on collision data for San Diego within 2022, due to it's completeness. It currently has over 10000 collisions in San Diego County. Primarily, it uses the Statewide Integrated Traffic Records System (SWITRS) as a database and process data gathered from a collision scene. We take this specifically from SANDAG due to their reliability as a data distributor for spatial data with the help of California Highway Patrol. We will be using data primarily from 2023. "
+    "* This data focuses on collision data for San Diego within 2022, due to it's completeness. It currently has over 10000 collisions in San Diego County. Primarily, it uses the Statewide Integrated Traffic Records System (SWITRS) as a database and process data gathered from a collision scene. We take this specifically from SANDAG due to their reliability as a data distributor for spatial data with the help of California Highway Patrol. We will be using data primarily from 2023. \n",
+    "\n",
+    "ArcGIS Online USA Counties \n",
+    "* Used to determine the counties in the United States; additionally, used for geoenrichment to find population density"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,23 +155,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collision_layer = gis.content.search(query = \"owner:dsc170wi25_31\", item_type = \"Feature Layer\")[1]\n",
+    "collision_layer = gis.content.search(query = \"owner:dsc170wi25_31\", item_type = \"Feature Layer\")[2]\n",
     "collision_fl = gis.content.get(collision_layer.id).layers[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find county barrier for San Dieg\n",
+    "counties = gis.content.search(\"USA Counties generalized\", \"Feature Layer\", outside_org=True)[4]\n",
+    "counties_fl = gis.content.get(counties.id).layers[0]\n",
+    "sd_county_sdf = counties_fl.query(\"NAME = 'San Diego County'\", return_geometry=True).sdf\n",
+    "sd_county_gdf = gpd.GeoDataFrame(sd_county_sdf).set_geometry(\"SHAPE\")\n",
+    "sd_county_gdf = sd_county_gdf.set_crs(\"4326\")\n",
+    "sd_county_gdf = sd_county_gdf.to_crs(\"3857\")\n",
+    "\n",
+    "# find US zip codes for San Diego\n",
+    "zip_codes = gis.content.search(\"zip code\", item_type = \"Feature Layer\", outside_org = True)[2]\n",
+    "zip_codes_fl = gis.content.get(zip_codes.id).layers[0]\n",
+    "california_zip_codes_sdf = zip_codes_fl.query(where = \"STATE = 'CA'\").sdf\n",
+    "ca_zip_codes_gdf = gpd.GeoDataFrame(california_zip_codes_sdf).set_geometry(\"SHAPE\")\n",
+    "ca_zip_codes_gdf = ca_zip_codes_gdf.set_crs(\"3857\")\n",
+    "\n",
+    "# spatial join these two to find zip codes that lie within San Diego County\n",
+    "sd_county_gdf['SHAPE'] = sd_county_gdf['SHAPE'].buffer(5000)\n",
+    "sd_zip_codes = ca_zip_codes_gdf.sjoin(sd_county_gdf, predicate = 'within')\n",
+    "\n",
+    "# create 'density_class' based on 'pop_sqmi_l'\n",
+    "def classify_density(pop_density):\n",
+    "    if pop_density > 1000:\n",
+    "        return \"Urban\"\n",
+    "    elif pop_density > 200:\n",
+    "        return \"Suburban\"\n",
+    "    else:\n",
+    "        return \"Rural\"\n",
+    "\n",
+    "sd_zip_codes['POP_SQMI_left'] = sd_zip_codes['POP_SQMI_left'].fillna(3860)\n",
+    "sd_zip_codes[\"density_class\"] = sd_zip_codes[\"POP_SQMI_left\"].apply(\n",
+    "    classify_density\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert into feature layer -> don't run again, already created\n",
+    "sd_zip_sdf = GeoAccessor.from_geodataframe(\n",
+    "    sd_zip_codes, column_name = \"SHAPE\"\n",
+    ")\n",
+    "zip_code_fl = sd_zip_sdf.spatial.to_featurelayer(\n",
+    "    title = \"San Diego County Zip Codes\",\n",
+    "    gis = gis,\n",
+    "    tags = [\"San Diego\", \"Zip Codes\", \"County\"],\n",
+    "    overwrite = False,\n",
+    "    sanitize_columns = True,\n",
+    "    service_name = \"San_Diego_County_ZipCodes\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_layer = gis.content.search(\n",
+    "    query=\"owner:dsc170wi25_31\", item_type=\"Feature Layer\"\n",
+    ")[1]\n",
+    "sd_zip_codes_fl = gis.content.get(zip_code_layer.id).layers[0]\n",
+    "sd_zip_codes_sdf = sd_zip_codes_fl.query().sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72128c993a38431da2e767c8ea8ae92b",
+       "model_id": "d9c259f264214c7a8b1d4e8a2c611355",
        "version_major": 2,
        "version_minor": 1
       },
@@ -176,15 +252,67 @@
        "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "map1 = gis.map(\"San Diego, CA\")\n",
+    "\n",
+    "# population density renderer\n",
+    "population_density_renderer = {\n",
+    "    \"type\": \"uniqueValue\",\n",
+    "    \"field1\": \"density_cl\",\n",
+    "    \"uniqueValueInfos\": [\n",
+    "        {\n",
+    "            \"value\": \"Urban\",\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [252, 101, 66, 100],  # Transparent fill\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [252, 101, 66, 255],  # Red outline for urban areas\n",
+    "                    \"width\": 1.5,\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": \"Urban\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"value\": \"Suburban\",\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [162, 190, 149, 100],  # Transparent fill\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [162, 190, 149, 255],  # Green outline for suburban areas\n",
+    "                    \"width\": 1.5,\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": \"Suburban\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"value\": \"Rural\",\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [55, 94, 151, 100],  # Transparent fill\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [55, 94, 151, 255],  # Blue outline for rural areas\n",
+    "                    \"width\": 1.5,\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": \"Rural\",\n",
+    "        },\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "map1.content.add(\n",
+    "    sd_zip_codes_fl, drawing_info={\"renderer\": population_density_renderer}\n",
+    ")\n",
     "map1.content.add(collision_fl)\n",
-    "map1"
+    "map1.legend.enabled = True\n",
+    "map1\n"
    ]
   },
   {
